Updated index with better content for tour
- Added bootstrap to base JS file (for menus)
- Updated tasks in package.json
- Updated index file as noted

--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "webpack-dev-server": "^5.2.0"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "serve": "webpack serve --mode development --no-client-overlay",
+    "build": "NODE_ENV=production webpack --mode production --progress",
+    "build:dev": "webpack --mode development --progress -w"
   }
 }
