--- a/package.json
+++ b/package.json
@@ -14,32 +14,34 @@
     "@babel/preset-env": "^7.26.9",
     "@babel/preset-typescript": "^7.26.0",
     "@eslint/js": "^9.22.0",
-    "@popperjs/core": "^2.11.8",
     "@stylistic/eslint-plugin": "^4.2.0",
     "@types/bootstrap": "^5.2.10",
-    "bootstrap": "^5.3.3",
-    "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^7.1.2",
     "eslint": "^9.22.0",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "mini-css-extract-plugin": "^2.9.2",
     "sass": "^1.85.1",
-    "sass-loader": "^16.0.5",
-    "terser-webpack-plugin": "^5.3.14",
-    "ts-loader": "^9.5.2",
     "typescript": "^5.8.2",
-    "typescript-eslint": "^8.26.1",
-    "webpack": "^5.98.0",
-    "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.0"
+    "typescript-eslint": "^8.26.1"
   },
   "scripts": {
     "test": "jest",
     "serve": "webpack serve --mode development --no-client-overlay",
-    "build": "NODE_ENV=production webpack --mode production --progress",
-    "build:dev": "webpack --mode development --progress -w"
+    "build": "tsc -b tsconfig.esm.json tsconfig.cjs.json tsconfig.types.json && sass ./src/css/index.scss ./dist/css/index.css --no-source-map -q -s compressed",
+    "build:dev": "webpack --mode development --progress -w",
+    "postbuild": "node install.cjs"
   },
-  "dependencies": {}
+  "exports": {
+    "./*": {
+      "types": "./dist/types/*",
+      "import": "./dist/esm/*",
+      "require": "./dist/cjs/*",
+      "default": "./dist/esm/*",
+      "css": "./dist/css/*"
+    }
+  },
+  "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.3"
+  }
 }
