--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,19 @@
 {
   "compilerOptions": {
-    "baseUrl": "./src",                                  /* Base directory to resolve non-absolute module names. */
     "target": "ES2022",                                  /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
     "module": "CommonJS",                                /* Specify what module code is generated. */
     "esModuleInterop": true,                             /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
     "forceConsistentCasingInFileNames": true,            /* Ensure that casing is correct in imports. */
     "strict": true,                                      /* Enable all strict type-checking options. */
     "skipLibCheck": true,                                /* Skip type checking all .d.ts files. */
+    "moduleResolution": "node",
+    "paths": {
+      "common/*": ["./src/lib/common/*"],
+      "highlighter": ["./src/lib/highlighter"],
+      "step": ["./src/lib/step"],
+      "tooltip": ["./src/lib/tooltip"],
+      "tour": ["./src/lib/tour"],
+    }
   },
-  "exclude": ["node_modules", "public", "src/**/*.test.tsx", "src/**/*.test.ts"],
+  "exclude": ["node_modules", "public", "src/**/*.test.tsx", "src/**/*.test.ts", "dist"],
 }
