--- a/package.json
+++ b/package.json
@@ -1,10 +1,23 @@
 {
   "name": "page-pilot",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Walkthrough component for use with BootStrap 5",
   "repository": "https://github.com/droberts-ctrlo/PagePilot",
   "author": "Dave Roberts <d.roberts@ctrlo.com>",
   "license": "MIT",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "types": "dist/types/index.d.ts",
+  "css": "dist/css/index.css",
+  "exports": {
+    ".": {
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js",
+      "css": "./dist/css/index.css",
+      "default": "./dist/esm/index.js",
+      "types": "./dist/types/index.d.ts"
+    }
+  },
   "devDependencies": {
     "@babel/core": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
@@ -26,15 +39,6 @@
     "build": "tsc -b tsconfig.esm.json tsconfig.cjs.json tsconfig.types.json && sass ./src/css/index.scss ./dist/css/index.css --no-source-map -q -s compressed",
     "build:dev": "webpack --mode development --progress -w",
     "postbuild": "node install.cjs"
-  },
-  "exports": {
-    "./*": {
-      "types": "./dist/types/*",
-      "import": "./dist/esm/*",
-      "require": "./dist/cjs/*",
-      "default": "./dist/esm/*",
-      "css": "./dist/css/*"
-    }
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
