--- a/tsconfig.types.json
+++ b/tsconfig.types.json
@@ -3,6 +3,6 @@
     "compilerOptions": {
         "outDir": "./dist/types",
         "declaration": true,
-        "emitDeclarationOnly": true
+        "emitDeclarationOnly": true,
     }
 }
