Updated mappings and config for tsconfigs

--- a/tsconfig.cjs.json
+++ b/tsconfig.cjs.json
@@ -2,6 +2,8 @@
     "extends": "./tsconfig.json",
     "compilerOptions": {
         "outDir": "./dist/cjs",
-        "module": "esnext"
+        "module": "CommonJS",
+        "target": "ES2022",
+        "rewriteRelativeImportExtensions": true,
     }
 }
