--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -1,8 +1,8 @@
 {
     "extends": "./tsconfig.json",
     "compilerOptions": {
-        "moduleResolution": "node",
         "outDir": "./dist/esm",
-        "module": "esnext"
+        "module": "ES2022",
+        "target": "ES2022",
     }
 }
